--- a/view/battle.html
+++ b/view/battle.html
@@ -1,10 +1,6 @@
 <div class="battle">welcome battle!</div>
 
 <script>
-	socket.on('battle', function(msg){
-		console.log(msg);
-	});
-
     socket.on('play_state', function(data){
         var chess = data.chess; // 1白棋 2黑棋
         var play_state = data.state; // -1下棋失败 6胜利 9继续下
@@ -14,8 +10,8 @@
     $("your-selector").click(function(){
         var data = {
             chess: 1, // 1白棋 2黑棋
-            x:1,
-            y:1 
+            x:1, // 当前下的x坐标
+            y:1  // 当前下的y坐标
         };
         socket.emit('play_one', data);
     });
