--- a/view/battle.html
+++ b/view/battle.html
@@ -1,20 +1,118 @@
 <div class="battle">welcome battle!</div>
-<canvas id="cvs"></canvas>
-<p id="tips"></p>
-<button id="reStart">重新开始</button>
+<canvas id="battle_cvs"></canvas>
+<p id="battle_tips"></p>
+<button id="battle_reStart">重新开始</button>
 
 <script>
-    socket.on('play_state', function(data){
-        var chess = data.chess; // 1白棋 2黑棋
-        var play_state = data.state; // -1下棋失败 6胜利 9继续下
-    });
+	(function() {
 
-    $("your-selector").click(function(){
-        var data = {
-            chess: 1, // 1白棋 2黑棋
-            x:1, // 当前下的x坐标
-            y:1  // 当前下的y坐标
-        };
-        socket.emit('play_one', data);
-    });
+
+		var GRID_SIZE = 40;
+		var HORIZONTAL_SIZE = 15;
+		var VERTICAL_SIZE = 12;
+		var checkerboard = [];
+		var whiteTrun = true;
+
+		var cvs = document.getElementById('battle_cvs');
+		var ctx = cvs.getContext('2d');
+
+		cvs.width = GRID_SIZE * HORIZONTAL_SIZE;
+		cvs.height = GRID_SIZE * VERTICAL_SIZE;
+
+
+		/*初始化*/
+		function init() {
+			for(var i = -5; i < HORIZONTAL_SIZE + 5; i++) {
+				checkerboard[i] = [];
+				for (var j = -5; j < VERTICAL_SIZE + 5; j++)
+				{
+					checkerboard[i][j] = {
+						state: 0,
+						type: true
+					};
+				}
+			}
+			drawCheckerboard();
+			cvs.onclick = putChess;
+		}
+
+		/*画棋盘*/
+		function drawCheckerboard() {
+			for (var i = 0; i < HORIZONTAL_SIZE; i++)
+			{
+				for (var j = 0; j < VERTICAL_SIZE; j++)
+				{
+					ctx.beginPath();
+					//边框颜色
+					ctx.strokeStyle = '#000';
+					ctx.fillStyle = 'yellow';
+					ctx.fillRect(i*GRID_SIZE, j*GRID_SIZE, GRID_SIZE, GRID_SIZE);
+					ctx.strokeRect(i*GRID_SIZE, j*GRID_SIZE, GRID_SIZE, GRID_SIZE);
+					ctx.closePath();
+				}
+			}
+		}
+
+		/**
+		* 画棋子
+		* @param {*} x
+		* @param {*} y
+		*/
+
+		function drawArc(x, y) {
+			ctx.beginPath();
+			ctx.arc(x*GRID_SIZE + GRID_SIZE/2, y*GRID_SIZE + GRID_SIZE/2, (GRID_SIZE/ 2) * 0.8, 0, 2*Math.PI);
+			ctx.fillStyle = (whiteTrun == true? '#eee' : '#000');
+			ctx.fill();
+			ctx.closePath();
+
+			checkerboard[x][y].state = 1;
+			checkerboard[x][y].type = whiteTrun;
+			whiteTrun = !whiteTrun;
+		}
+
+
+		/**
+		* 放置棋子
+		* @param {*} e
+		*/
+		function putChess(e) {
+			//当前鼠标点击位置
+			var x = e.pageX - cvs.offsetLeft;
+			var y = e.pageY - cvs.offsetTop;
+
+			//落在哪个格子
+			x = parseInt(x/GRID_SIZE);
+			y = parseInt(y/GRID_SIZE);
+
+			//有棋子
+			if(checkerboard[x][y].state) 
+				return;
+
+			drawArc(x, y);
+			document.getElementById('battle_tips').innerText = (whiteTrun === true? '现在轮到白棋落子': '现在轮到黑棋落子');
+		}
+
+
+		document.getElementById('battle_reStart').onclick = function() {
+			document.getElementById('battle_tips').innerText = 'wwww';
+			init();
+		}
+		
+		socket.on('play_state', function(data){
+			var chess = data.chess; // 1白棋 2黑棋
+			var play_state = data.state; // -1下棋失败 6胜利 9继续下
+		});
+
+		$("#battle_cvs").click(function(){
+			var data = {
+				chess: 1, // 1白棋 2黑棋
+				x:1, // 当前下的x坐标
+				y:1  // 当前下的y坐标
+			};
+			socket.emit('play_one', data);
+		});
+
+	})();
+
 </script>
