--- a/view/battle.html
+++ b/view/battle.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 
-	#battel {
+	#battle {
 		display: flex;
 		justify-content: center;
 	}
@@ -23,12 +23,12 @@
 		font-size:22px;
 	}
 
-	#battle_div_reStart {
+	#battle_div_return {
 		display: flex;
 		justify-content: center;
 	}
 
-	#battle_reStart {
+	#battle_return {
 		width: 130px;
 		height: 60px;
 	}
@@ -37,12 +37,12 @@
 <div id="battle">welcome battle!</div>
 <div id="battle_div_cvs"><canvas id="battle_cvs"></canvas></div>
 <div id="battle_div_tips"><p id="battle_tips"></p></div>
-<div id="battle_div_reStart"><button id="battle_reStart">重新开始</button></div>
+<div id="battle_div_return"><button id="battle_return">返回</button></div>
 
 <script>
 	(function() {
 		
-		var GRID_SIZE = 40px;
+		var GRID_SIZE = 40;
 		var HORIZONTAL_SIZE = 15;
 		var VERTICAL_SIZE = 12;
 		var checkerboard = [];
@@ -65,6 +65,7 @@
 		}
 
 		function init() {
+			socket.emit('player_chess', user_name);
 			for(var i = -5; i < HORIZONTAL_SIZE + 5; i++) {
 				checkerboard[i] = [];
 				for (var j = -5; j < VERTICAL_SIZE + 5; j++)
@@ -78,6 +79,11 @@
 			drawCheckerboard();
 			cvs.onclick = putChess;
 		}
+
+		socket.on('player_chess', function(chess){
+			whiteTrun = chess == 1? false: true;
+			console.log('chess ' + chess);
+		});
 
 		/*画棋盘*/
 		function drawCheckerboard() {
@@ -111,7 +117,6 @@
 
 			checkerboard[x][y].state = 1;
 			checkerboard[x][y].type = whiteTrun;
-			whiteTrun = !whiteTrun;
 		}
 
 
@@ -136,7 +141,7 @@
 
 		}
 
-		document.getElementById('battle_reStart').onclick = function() {
+		document.getElementById('battle_return').onclick = function() {
 			document.getElementById('battle_tips').innerText = 'wwww';
 			init();
 		}
