--- a/view/waiting.html
+++ b/view/waiting.html
@@ -8,26 +8,29 @@
 <div id="waiting_people">N</div>
 
 <script>
-    console.log('waiting...');
+    (function(){
+        console.log('waiting...');
 
-    socket.on('game_start', function(data){
-        console.log('game_start');
-        $.pjax({
-            url: '/battle',
-            container: '#container'
+        socket.on('game_start', function(data){
+            console.log('game_start');
+            $.pjax({
+                url: '/battle',
+                container: '#container'
+            });
         });
-    });
 
-    socket.on('game_waiting', function(data){
-        console.log('game_waiting');
-        var room_id = data.room_id;
-        var player_number = data.player_number;
-        console.log(room_id, player_number);
-        $('#waiting_people').text(player_number);
-    });
-    
-    socket.emit('join', randomString());
+        socket.on('game_waiting', function(data){
+            console.log('game_waiting');
+            var room_id = data.room_id;
+            var player_number = data.player_number;
+            console.log(room_id, player_number);
+            $('#waiting_people').text(player_number);
+        });
+        
+        socket.emit('join', randomString());
 
-    player_status = 2;
+        player_status = 2;
+    })();
+ 
 
 </script>
