--- a/view/generals.html
+++ b/view/generals.html
@@ -43,19 +43,24 @@
 <script>
 
     (function(){
-        if (player_status != 0)
+        if (player_status == 0) // 未游戏
+        {
+            $('.button').off('click');
+            $('.button').on('click', function(){
+                $.pjax({
+                    url: '/waiting',
+                    container: '#container'
+                });
+                user_name = $('#name_input').val();
+            });
+        }
+        else if (player_status == 1 || player_status == 2) // 游戏中或者等待中
         {
             socket.emit('leave');
             player_status = 0;
         }
 
-        $('.button').click(function(){
-            $.pjax({
-                url: '/waiting',
-                container: '#container'
-            });
-            user_name = $('#name_input').val();
-        });        
+        player_status = 0;
     })();
 
 
